force-app/main/default/objects/PedidoLineItem__c/fields/CBMMasterbox__c.field-meta.xml
<CustomField>
    <fullName>CBMMasterbox__c</fullName>
    <label>CBM Masterbox</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>