force-app/main/default/objects/PedidoLineItem__c/fields/Codigo_Producto_sin_marca__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Producto_sin_marca__c</fullName>
    <formula>LEFT( CodigoProducto__c, 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Producto (sin marca)</label>
    <type>Text</type>
</CustomField>