force-app/main/default/objects/PedidoLineItem__c/fields/CodigoProducto__c.field-meta.xml
<CustomField>
    <fullName>CodigoProducto__c</fullName>
    <formula>IF(ISBLANK(Producto__c), 
ProformaLineItem__r.Codigo_de_Producto__c,
Producto__r.CodigoDeProductoBase__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Producto</label>
    <type>Text</type>
</CustomField>