force-app/main/default/objects/PedidoLineItem__c/fields/Container_Number__c.field-meta.xml
<CustomField>
    <fullName>Container_Number__c</fullName>
    <description>Container number (portal)</description>
    <label>Container #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>