force-app/main/default/objects/PedidoLineItem__c/fields/Convenio_2__c.field-meta.xml
<CustomField>
    <fullName>Convenio_2__c</fullName>
    <label>% Convenio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>