force-app/main/default/objects/PedidoLineItem__c/fields/CostoOrigen__c.field-meta.xml
<CustomField>
    <fullName>CostoOrigen__c</fullName>
    <label>Costo Fábrica</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>