force-app/main/default/objects/PedidoLineItem__c/fields/CostoOrigenTot__c.field-meta.xml
<CustomField>
    <fullName>CostoOrigenTot__c</fullName>
    <formula>CostoOrigen__c *  Unidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Origen (total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>