force-app/main/default/objects/PedidoLineItem__c/fields/DescripcionProducto__c.field-meta.xml
<CustomField>
    <fullName>DescripcionProducto__c</fullName>
    <formula>ProformaLineItem__r.DescripcionProducto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción Producto</label>
    <type>Text</type>
</CustomField>