force-app/main/default/objects/PedidoLineItem__c/fields/DescripcionProductoIngles__c.field-meta.xml
<CustomField>
    <fullName>DescripcionProductoIngles__c</fullName>
    <formula>IF ( ISBLANK ( Producto__r.ProductoBase__r.Name ) ,
Producto__r.Name ,
Producto__r.ProductoBase__r.Name
)</formula>
    <label>Descripción Producto Inglés</label>
    <type>Text</type>
</CustomField>