force-app/main/default/objects/PedidoLineItem__c/fields/EstadoDeFacturaDeCliente__c.field-meta.xml
<CustomField>
    <fullName>EstadoDeFacturaDeCliente__c</fullName>
    <label>Estado de factura de cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>