force-app/main/default/objects/PedidoLineItem__c/fields/EstadoDeFacturaDeProveedor__c.field-meta.xml
<CustomField>
    <fullName>EstadoDeFacturaDeProveedor__c</fullName>
    <label>Estado de factura de proveedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>