force-app/main/default/objects/PedidoLineItem__c/fields/FacturaDeCliente__c.field-meta.xml
<CustomField>
    <fullName>FacturaDeCliente__c</fullName>
    <formula>HYPERLINK ( &quot;/&quot; &amp; ItemDeFacturaDeCliente__r.Factura__c , ItemDeFacturaDeCliente__r.Factura__r.Name , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factura de Cliente</label>
    <type>Text</type>
</CustomField>