force-app/main/default/objects/PedidoLineItem__c/fields/FacturaDeProveedor__c.field-meta.xml
<CustomField>
    <fullName>FacturaDeProveedor__c</fullName>
    <formula>HYPERLINK ( &quot;/&quot; &amp; ItemDeFacturaDeProveedor__r.Factura__c , ItemDeFacturaDeProveedor__r.Factura__r.Name , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factura de Proveedor</label>
    <type>Text</type>
</CustomField>