force-app/main/default/objects/PedidoLineItem__c/fields/Importe_Incremento_Puntual__c.field-meta.xml
<CustomField>
    <fullName>Importe_Incremento_Puntual__c</fullName>
    <formula>PrecioDeVentaTot__c *  Porcentaje_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Incremento Puntual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>