force-app/main/default/objects/PedidoLineItem__c/fields/Importe_Venta_Neto_Nuevo__c.field-meta.xml
<CustomField>
    <fullName>Importe_Venta_Neto_Nuevo__c</fullName>
    <formula>PrecioDeVentaTot__c - (PrecioDeVentaTot__c * ( Aportaciones_2__c + Convenio_2__c +  Porcentaje_Item__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Venta Neto (Nuevo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>