force-app/main/default/objects/PedidoLineItem__c/fields/ImporteAportaciones__c.field-meta.xml
<CustomField>
    <fullName>ImporteAportaciones__c</fullName>
    <formula>PrecioDeVentaTot__c * ( Aportaciones_2__c + Porcentaje_Item__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Aportaciones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>