force-app/main/default/objects/PedidoLineItem__c/fields/ImporteConvenio__c.field-meta.xml
<CustomField>
    <fullName>ImporteConvenio__c</fullName>
    <formula>PrecioDeVentaTot__c * Convenio_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Convenio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>