force-app/main/default/objects/PedidoLineItem__c/fields/ImporteVentaNeto__c.field-meta.xml
<CustomField>
    <fullName>ImporteVentaNeto__c</fullName>
    <description>Usado por el sistema para el cálculo de margen a nivel del line item</description>
    <formula>PrecioDeVentaTot__c - (PrecioDeVentaTot__c * (PedidoDeCompra__r.Proforma__r.Cuenta__r.PorcentajeAportaciones__c + PedidoDeCompra__r.Proforma__r.Cuenta__r.PorcentajeConvenio__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Usado por el sistema para el cálculo de margen a nivel del line item</inlineHelpText>
    <label>Importe Venta Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>