force-app/main/default/objects/PedidoLineItem__c/fields/ItemDeFacturaDeCliente__c.field-meta.xml
<CustomField>
    <fullName>ItemDeFacturaDeCliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item de Factura de Cliente</label>
    <referenceTo>ItemDeFacturaDeCliente__c</referenceTo>
    <relationshipLabel>Pedido Line Items</relationshipLabel>
    <relationshipName>Pedido_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>