force-app/main/default/objects/PedidoLineItem__c/fields/ItemDeFacturaDeProveedor__c.field-meta.xml
<CustomField>
    <fullName>ItemDeFacturaDeProveedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item de Factura de Proveedor</label>
    <referenceTo>ItemDeFacturaDeProveedor__c</referenceTo>
    <relationshipLabel>Pedido Line Items</relationshipLabel>
    <relationshipName>PedidoLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>