force-app/main/default/objects/PedidoLineItem__c/fields/LC_Number__c.field-meta.xml
<CustomField>
    <fullName>LC_Number__c</fullName>
    <label>LC Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>