force-app/main/default/objects/PedidoLineItem__c/fields/NumeroDeCajasEnContenedores__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeCajasEnContenedores__c</fullName>
    <label>Número de cajas en contenedores</label>
    <summarizedField>ItemDeContenedorDePedido__c.NumeroDeCajas__c</summarizedField>
    <summaryForeignKey>ItemDeContenedorDePedido__c.PedidoLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>