force-app/main/default/objects/PedidoLineItem__c/fields/PackingList__c.field-meta.xml
<CustomField>
    <fullName>PackingList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PackingList</label>
    <referenceTo>PackingList__c</referenceTo>
    <relationshipLabel>Pedido Line Items</relationshipLabel>
    <relationshipName>Pedido_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>