force-app/main/default/objects/PedidoLineItem__c/fields/Pedido_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Nombre__c</fullName>
    <formula>PedidoDeCompra__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pedido Nombre</label>
    <type>Text</type>
</CustomField>