force-app/main/default/objects/PedidoLineItem__c/fields/PedidoDeCompra__c.field-meta.xml
<CustomField>
    <fullName>PedidoDeCompra__c</fullName>
    <label>Pedido de Compra</label>
    <referenceTo>PedidoDeCompra__c</referenceTo>
    <relationshipLabel>Pedido Line Items</relationshipLabel>
    <relationshipName>PedidoLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>