force-app/main/default/objects/PedidoLineItem__c/fields/Porcentaje_Item__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Item__c</fullName>
    <label>% Puntual</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>