force-app/main/default/objects/PedidoLineItem__c/fields/PrecioDeVenta__c.field-meta.xml
<CustomField>
    <fullName>PrecioDeVenta__c</fullName>
    <description>El precio al que se vendió al cliente según la Proforma. (No se modifica)</description>
    <inlineHelpText>El precio al que se vendió al cliente según la Proforma. (No se modifica)</inlineHelpText>
    <label>Precio de Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>