force-app/main/default/objects/PedidoLineItem__c/fields/PrecioDeVentaTot__c.field-meta.xml
<CustomField>
    <fullName>PrecioDeVentaTot__c</fullName>
    <formula>PrecioDeVenta__c *  Unidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de Venta (total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>