force-app/main/default/objects/PedidoLineItem__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pedido Line Items</relationshipLabel>
    <relationshipName>Pedido_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>