force-app/main/default/objects/PedidoLineItem__c/fields/ProformaLineItem__c.field-meta.xml
<CustomField>
    <fullName>ProformaLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proforma Line Item</label>
    <referenceTo>ProformaLineItem__c</referenceTo>
    <relationshipLabel>Pedido Line Items</relationshipLabel>
    <relationshipName>Pedido_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>