force-app/main/default/objects/PedidoLineItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Qty (Pcs) (portal)</description>
    <label>Quantity (pcs)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>