force-app/main/default/objects/PedidoLineItem__c/fields/SEAL_Number__c.field-meta.xml
<CustomField>
    <fullName>SEAL_Number__c</fullName>
    <description>SEAL number (portal)</description>
    <label>SEAL #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>