force-app/main/default/objects/PedidoLineItem__c/fields/Total_Cnts__c.field-meta.xml
<CustomField>
    <fullName>Total_Cnts__c</fullName>
    <description>Total containers (portal)</description>
    <label>Total Cnts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>