force-app/main/default/objects/PedidoLineItem__c/fields/UnidadesPorMasterbox__c.field-meta.xml
<CustomField>
    <fullName>UnidadesPorMasterbox__c</fullName>
    <description>Vienen del Producto asociado al item de Proforma, pero se actualizan (el sistema) si se cambia el proveedor</description>
    <inlineHelpText>Vienen del Producto asociado al item de Proforma, pero se actualizan (el sistema) si se cambia el proveedor</inlineHelpText>
    <label>Unidades por Masterbox</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>